# rust-grpc-testing

./: Cargo.toml
proto/: payments.proto
src/: client.rs  server.rs
